--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/setup-node@v4 # Use the latest version
         with:
           node-version: '18' # Use a version compatible with your react-scripts, 18 is usually safe
-          cache: 'npm'
+          #cache: 'npm'
 
       - name: Install dependencies
         run: npm install
