--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "Sudoku", // Or your repo name
+  "name": "Sudoku",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Viking-Maker.github.io/Sudoku", // <-- ADD/EDIT THIS LINE
+  "homepage": "https://Viking-Maker.github.io/Sudoku",
   "dependencies": {
-    "react": "^18.2.0", // Use versions compatible with your code
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1" // Crucial for CRA build script
-    // Add any other dependencies your App.js uses here
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build", // <-- IMPORTANT BUILD SCRIPT
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
