--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "gh-pages": "^6.1.1"
+    "react-scripts": "^5.0.1" 
   },
   "scripts": {
     "start": "react-scripts start",
