--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.1.1",
     "react-scripts": "^5.0.1" 
   },
   "scripts": {
